ansible roboshop roles

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,23 +1,23 @@
 [mongodb]
-mongodb.daws84s.site
+mongodb.muraliitemp.online
 [catalogue]
-catalogue.daws84s.site
+catalogue.muraliitemp.online
 [redis]
-redis.daws84s.site
+redis.muraliitemp.online
 [user]
-user.daws84s.site
+user.muraliitemp.online
 [cart]
-cart.daws84s.site
+cart.muraliitemp.online
 [frontend]
-frontend.daws84s.site
+frontend.muraliitemp.online
 [mysql]
-mysql.daws84s.site
+mysql.muraliitemp.online
 [shipping]
-shipping.daws84s.site
+shipping.muraliitemp.online
 [rabbitmq]
-rabbitmq.daws84s.site
+rabbitmq.muraliitemp.online
 [payment]
-payment.daws84s.site
+payment.muraliitemp.online
 
 [all:vars]
 ansible_user=ec2-user
